Fixed z-index of infobox being behind background

--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,7 @@ body {
   top:0;
   left:0;
   pointer-events: none;
+  z-index: 51;
 }
 
 .infoBox.hidden {
